--- a/web/package.json
+++ b/web/package.json
@@ -12,33 +12,37 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@infectoone/vue-ganttastic": "^2.3.2",
     "@unocss/reset": "66.1.0-beta.3",
-    "axios": "^1.8.1",
+    "@vueuse/core": "^12.8.2",
+    "axios": "^1.8.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
-    "@types/node": "^22.13.9",
+    "@types/node": "^22.13.10",
     "@unocss/eslint-config": "66.1.0-beta.3",
     "@vicons/fluent": "^0.13.0",
+    "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
-    "eslint": "^9.21.0",
+    "eslint": "^9.22.0",
     "naive-ui": "^2.41.0",
     "prettier": "^3.5.3",
     "sass-embedded": "^1.85.1",
     "typescript": "~5.7.3",
     "unocss": "66.1.0-beta.3",
-    "vite": "^6.2.0",
+    "vite": "^6.2.1",
     "vite-plugin-pages": "^0.32.5",
     "vite-plugin-vue-layouts": "^0.11.0",
     "vue-tsc": "^2.2.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "vue-demi"
     ]
   }
 }
